# Cityscapes-Object-Removal-and-Inpainting

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: baseline_florence_patchgan.yaml  core_sdxl_clora.yaml  lora_dataset.yaml
scripts/: build_lora_dataset.py  run_baseline_pipeline.py  run_core_pipeline.py
src/: __init__.py  data.py
src/inpaint/: patchgan.py  sdxl_clora.py
src/lora/: caption_pack.py  dataset_filter.py
src/masking/: binary_mask.py
src/pipelines/: baseline_florence_patchgan.py  core_sdxl_clora.py
src/segmentation/: deeplab.py  florence_sam.py
src/utils/: config.py
